[package]
name = "world_id"
version = "0.1.0"
authors = ["Simon Heath <icefoxen@gmail.com>"]
description = "An experiment in creating a distributed PKI."
repository = "https://github.com/icefoxen/world_id"
readme = "README.md"
keywords = ["ipfs", "crypto", "cryptography", "pki", "public-key"]
categories = ["cryptography", "authentication", "network-programming"]
license  = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
failure = "0.1"
futures = "0.1"
ipfs-api = "0.4.0-alpha.3"
pem = "0.5"
ring = "0.13.0-alpha"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_cbor = "0.8"
tokio-core = "0.1"
untrusted = "0.6"
